syntax = "proto3";

package inventory;
option go_package = "pb/inventory";

// import "google/protobuf/wrappers.proto";
// import "google/protobuf/timestamp.proto";

message InventoryItem {
  int64 id = 1;
  int64 storeId = 2;
  string sku = 3;
  string name = 4;
  int64 supplierId = 5;
  int64 brandId = 6;
}

message Warehouse {
  int64 id = 1;
  int64 storeId = 2;
}

message SockLevel {
  int64 storeId = 1;
  int64 warehouseId = 2;
  int64 inventoryItemId = 3;
  int32 quantity = 4;
}

message Supplier {
  int64 id = 1;
  int64 storeId = 2;
  string name = 3;
}

message Brand {
  int64 id = 1;
  int64 storeId = 2;
  string name = 3;
}

//
//
//
// Requests & Responses
//

// get item quantity
message GetItemQuantityRequest {
  int64 storeId = 1;
  string sku = 2;
  string region = 3;
}

message GetItemQuantityResponse {
  int64 storeId = 1;
  string sku = 2;
  int32 quanity = 3;
  int64 statusCode = 4;
  string statusMessage = 5;
}

// service client
service InventoryClient {
  rpc GetItemQuantity(GetItemQuantityRequest) returns (GetItemQuantityResponse);
}